add diffsuion and model parameters

--- a/configurations/PEMS04_astgcn.conf
+++ b/configurations/PEMS04_astgcn.conf
@@ -26,3 +26,19 @@ learning_rate = 0.001
 loss_function = mse
 metric_method = unmask
 missing_value=0.0
+
+[Diffusion Parameter]
+noise_steps = 1000
+beta_start = 1e-4
+beta_end = 0.02
+var_dim = 4
+device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')
+
+[Model Parameter]
+time_dim = 256
+device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')
+input_shape = 12
+input_dim = 256 #input_dim should equal to time_dime
+hidden_dim = 64
+output_dim = 4
+
