--- a/configurations/PEMS04_astgcn.conf
+++ b/configurations/PEMS04_astgcn.conf
@@ -1,6 +1,6 @@
 [Data]
-adj_filename = /content/drive/MyDrive/CA Road Info/data/PEMS04/PEMS04.csv
-graph_signal_matrix_filename = /content/drive/MyDrive/CA Road Info/data/PEMS04/PEMS04.npz
+adj_filename = ./data/PEMS04/PEMS04.csv
+graph_signal_matrix_filename = ./data/PEMS04/PEMS04.npz
 num_of_vertices = 307
 points_per_hour = 12
 num_for_predict = 4
