--- a/configurations/PEMS04_astgcn.conf
+++ b/configurations/PEMS04_astgcn.conf
@@ -32,6 +32,7 @@ noise_steps = 1000
 beta_start = 1e-4
 beta_end = 0.02
 var_dim = 4
+number_of_nodes = 307
 device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')
 
 [Model Parameter]
