--- a/configurations/PEMS04_astgcn.conf
+++ b/configurations/PEMS04_astgcn.conf
@@ -8,6 +8,7 @@ len_input = 4
 dataset_name = PEMS04
 
 [Training]
+run_name = try_condition
 ctx = 0
 in_channels = 1
 nb_block = 2
@@ -42,4 +43,5 @@ input_shape = 12
 input_dim = 256 #input_dim should equal to time_dime
 hidden_dim = 64
 output_dim = 4
+eval_flag = True
 
