add more para in config file and change node number for PEMS 08

--- a/configurations/PEMS08_astgcn.conf
+++ b/configurations/PEMS08_astgcn.conf
@@ -3,8 +3,8 @@ adj_filename = ../data/PEMS08/PEMS08.csv
 graph_signal_matrix_filename = ../data/PEMS08/PEMS08.npz
 num_of_vertices = 170
 points_per_hour = 12
-num_for_predict = 12
-len_input = 12
+num_for_predict = 4
+len_input = 4
 dataset_name = PEMS08
 
 [Training]
@@ -27,3 +27,20 @@ learning_rate = 0.001
 loss_function = mse
 metric_method = unmask
 missing_value=0.0
+
+[Diffusion Parameter]
+noise_steps = 1000
+beta_start = 1e-4
+beta_end = 0.02
+var_dim = 4
+number_of_nodes = 170
+device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')
+
+[Model Parameter]
+time_dim = 256
+device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')
+input_shape = 12
+input_dim = 256 #input_dim should equal to time_dime
+hidden_dim = 64
+output_dim = 4
+eval_flag = True
