--- a/configurations/PEMS04_astgcn.conf
+++ b/configurations/PEMS04_astgcn.conf
@@ -23,7 +23,7 @@ num_of_days = 0
 num_of_hours = 1
 start_epoch = 0
 epochs = 80
-learning_rate = 0.001 #use the same place in ASTGCN for lr change
+learning_rate = 0.001
 loss_function = mse
 metric_method = unmask
 missing_value=0.0
@@ -40,7 +40,7 @@ device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')
 time_dim = 256
 device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')
 input_shape = 12
-input_dim = 256 #input_dim should equal to time_dime
+input_dim = 256
 hidden_dim = 64
 output_dim = 4
 eval_flag = True
