--- a/configurations/PEMS08_astgcn.conf
+++ b/configurations/PEMS08_astgcn.conf
@@ -40,7 +40,7 @@ device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')
 time_dim = 256
 device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')
 input_shape = 12
-input_dim = 256 #input_dim should equal to time_dime
+input_dim = 256
 hidden_dim = 64
 output_dim = 4
 eval_flag = True
