add a reconstruct loss in the training part to reduce more loss. and epoch starting to consider the reconstruct loss can be changed and adjust.

--- a/configurations/PEMS04_astgcn.conf
+++ b/configurations/PEMS04_astgcn.conf
@@ -27,6 +27,7 @@ learning_rate = 0.001
 loss_function = mse
 metric_method = unmask
 missing_value=0.0
+epochs_starting_reconstruct_loss = 10
 
 [Diffusion Parameter]
 noise_steps = 1000
