--- a/configurations/PEMS08_astgcn.conf
+++ b/configurations/PEMS08_astgcn.conf
@@ -27,6 +27,7 @@ learning_rate = 0.001
 loss_function = mse
 metric_method = unmask
 missing_value=0.0
+epochs_starting_reconstruct_loss = 10
 
 [Diffusion Parameter]
 noise_steps = 1000
