add safegraph data again

--- a/configurations/NYC_new_astgcn.conf
+++ b/configurations/NYC_new_astgcn.conf
@@ -6,6 +6,7 @@ points_per_hour = 4
 num_for_predict = 4
 len_input = 4
 dataset_name = NYC
+adjmx_addson = ./data/NYC/new_distance.csv
 
 [Training]
 ctx = 0
