add method to calculate external adjmx for safegraph dataset

--- a/configurations/NYC_new_astgcn.conf
+++ b/configurations/NYC_new_astgcn.conf
@@ -6,7 +6,8 @@ points_per_hour = 4
 num_for_predict = 4
 len_input = 4
 dataset_name = NYC
-adjmx_addson = ./data/NYC/new_distance.csv
+adjmx_addson = ./data/NYC/real_distance_spar0.052.csv
+
 
 [Training]
 ctx = 0
