add config components in SafeGraph

--- a/configurations/NYC_new_astgcn.conf
+++ b/configurations/NYC_new_astgcn.conf
@@ -6,10 +6,11 @@ points_per_hour = 4
 num_for_predict = 4
 len_input = 4
 dataset_name = NYC
-adjmx_addson = ./data/NYC/real_distance_spar0.052.csv
+adjmx_addson = ./data/NYC/New ADJ Matrix/real_distance_spar0.052.csv
 
 
 [Training]
+run_name = try_condition
 ctx = 0
 in_channels = 4
 nb_block =4
@@ -23,10 +24,29 @@ num_of_weeks = 0
 num_of_days = 0
 num_of_hours = 1
 start_epoch = 0
-epochs = 500
+epochs = 2000
 learning_rate = 0.001
 loss_function = rmse
 metric_method = unmask
 missing_value=0.0
+epochs_starting_reconstruct_loss = 10
+reconstruct_flag = False
+
+[Diffusion Parameter]
+noise_steps = 1000
+beta_start = 1e-4
+beta_end = 0.02
+var_dim = 4
+number_of_nodes = 172
+device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')
+
+[Model Parameter]
+time_dim = 256
+device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')
+input_shape = 16
+input_dim = 256
+hidden_dim = 64
+output_dim = 4
+eval_flag = True
 
 
