add flag for fid calculation

--- a/configurations/PEMS04_astgcn.conf
+++ b/configurations/PEMS04_astgcn.conf
@@ -30,6 +30,7 @@ metric_method = unmask
 missing_value=0.0
 epochs_starting_reconstruct_loss = 10
 reconstruct_flag = False
+fid_flag = False
 
 [Diffusion Parameter]
 noise_steps = 1000
