add folders to store ckpts of different datasets

--- a/configurations/NYC_new_astgcn.conf
+++ b/configurations/NYC_new_astgcn.conf
@@ -10,7 +10,7 @@ adjmx_addson = ./data/NYC/New ADJ Matrix/real_distance_spar0.052.csv
 
 
 [Training]
-run_name = try_condition
+run_name = try_condition_NYC
 ctx = 0
 in_channels = 4
 nb_block =4
