--- a/configurations/PEMS08_astgcn.conf
+++ b/configurations/PEMS08_astgcn.conf
@@ -9,7 +9,7 @@ dataset_name = PEMS08
 
 
 [Training]
-run_name = try_condition
+run_name = try_condition_PEMS08
 ctx = 3
 in_channels = 1
 nb_block = 2
