--- a/configurations/PEMS04_astgcn.conf
+++ b/configurations/PEMS04_astgcn.conf
@@ -9,7 +9,7 @@ dataset_name = PEMS04
 
 
 [Training]
-run_name = try_condition
+run_name = try_condition_PEMS04
 ctx = 0
 in_channels = 1
 nb_block = 2
