change distance csv dir

--- a/configurations/NYC_new_astgcn.conf
+++ b/configurations/NYC_new_astgcn.conf
@@ -6,7 +6,7 @@ points_per_hour = 4
 num_for_predict = 4
 len_input = 4
 dataset_name = NYC
-adjmx_addson = ./data/NYC/New ADJ Matrix/real_distance_spar0.052.csv
+adjmx_addson = ./data/NYC/New ADJ Matrix/zip_distance_fromGoogleDistMat.csv
 
 
 [Training]
