update new distance.csv from Google API

--- a/configurations/NYC_new_astgcn.conf
+++ b/configurations/NYC_new_astgcn.conf
@@ -1,5 +1,5 @@
 [Data]
-adj_filename = ./data/NYC/new_distance.csv
+adj_filename = ./data/NYC/zip_distance_fromGoogleDistMat.csv
 graph_signal_matrix_filename = ./data/NYC/NYC_new.npz
 num_of_vertices = 172
 points_per_hour = 4
