add functions for evaluation

--- a/configurations/NYC_new_astgcn.conf
+++ b/configurations/NYC_new_astgcn.conf
@@ -6,7 +6,7 @@ points_per_hour = 4
 num_for_predict = 4
 len_input = 4
 dataset_name = NYC
-adjmx_addson = ./data/NYC/New ADJ Matrix/zip_distance_fromGoogleDistMat.csv
+perciption_csv = ./data/NYC/weekly_average_precipitation_fillnaNearAvg.csv
 
 
 [Training]
@@ -17,7 +17,7 @@ nb_block =4
 K = 1
 nb_chev_filter = 16
 nb_time_filter = 16
-batch_size = 16
+batch_size = 83
 model_name = astgcn_r
 dataset_name = NYC
 num_of_weeks = 0
