add number of environments as a config entry

--- a/configurations/NYC_new_astgcn.conf
+++ b/configurations/NYC_new_astgcn.conf
@@ -32,6 +32,7 @@ missing_value=0.0
 epochs_starting_reconstruct_loss = 10
 reconstruct_flag = False
 fid_flag = False
+number_envs = 6
 
 [Diffusion Parameter]
 noise_steps = 1000
