--- a/configurations/PEMS04_astgcn.conf
+++ b/configurations/PEMS04_astgcn.conf
@@ -24,6 +24,7 @@ num_of_days = 0
 num_of_hours = 1
 start_epoch = 0
 epochs = 2000
+diff_epochs = 1000
 learning_rate = 0.001
 loss_function = mse
 metric_method = unmask
